[#1017] Storing connections in Vault
Vault was chosen as a secure backend storage for connections.
Currently we support two backend for connections:
* kubernetes
* vault
Added dectypt token to secure access to the connections.
It's a terrible crutch and must be deleted after implementation of
[roles](https://github.com/legion-platform/legion/issues/1008).
